# agent-dash

./: README.md  pyproject.toml  requirements.txt
agent_dash/: __init__.py  app.py  db.py  ingest.py  metrics.py  poller.py
agent_dash/static/: dashboard.js
agent_dash/templates/: index.html  upload.html
tests/: __init__.py  test_app_factory.py  test_db.py  test_ingest.py  test_metrics.py  test_poller.py
